<resources>
    <string name="app_name">stores</string>
    <string name="hello">Hello in our store</string>
    <string name="todo">TODO</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="log_in">log in</string>
    <string name="welcome">Welcome in the store</string>
    <string name="want_to_buy">What do you want to buy / rent?</string>
    <string name="chooseCategory">Choose the category</string>
    <string name="next">next</string>
    <string name="the_category">The category :</string>
    <string name="choose_goods">Choose goods</string>
    <string name="item_name">Item name</string>
    <string name="insert_item_information">insert item information</string>
    <string name="category">category</string>
    <string name="quantity">quantity</string>
    <string name="brand">brand</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="search">Search in</string>
    <string name="about_item">About item :</string>
    <string name="buy">Buy</string>
    <string name="ignore">ignore</string>
    <string name="see_your_list">see your list</string>
    <string name="insert_items">sell items</string>
    <string name="buy_ignore">Buy / Ignore</string>
    <string name="insert_item">insert item</string>
    <string name="if_you_want_to_sell_items_click_here">If you want to sell Items click here:</string>
    <string name="desc_content_description">Description input field</string>
    <string name="price_content_description">Price input field</string>
    <string name="quantity_content_description">Quantity input field</string>
    <string name="brand_content_description">Brand input field</string>
    <string name="name_content_description">Item name input field</string>
    <string name="show_password">Show Password</string>
    <string name="rent">rent</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End date</string>
    <string name="choose_item_to_rest">Choose item to rest</string>
    <string name="bought_items">Bought Items</string>
    <string name="rented_items">Rented Items</string>
    <string name="delete_rent">Delete rent</string>
    <string name="dark_mode">Dark mode</string>
    <string name="proceed">Proceed</string>
    <string name="log_out">Log out</string>
</resources>