<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/baseline_account_circle_24" />

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/textView"
                android:text="@string/hello"
                tools:ignore="ExtraText" />

            <EditText
                style="@style/EditTextStyle"
                android:id="@+id/user"
                android:hint="@string/user_name"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                style="@style/EditTextStyle"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/password" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/showPassword" />

            <Button
                style="@style/buttons"
                android:text="@string/log_in"
                android:id="@+id/btn_log" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>