<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_account_circle_24" />

        <TextView
            android:id="@+id/insertItem"
            style="@style/TextViewStyle"
            android:text="@string/insert_item_information"
            app:layout_constraintTop_toBottomOf="@id/imageView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nameView"
            style="@style/TextViewStyle"
            android:text="@string/item_name"
            app:layout_constraintTop_toBottomOf="@id/insertItem"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/name"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/categoryText"
            style="@style/TextViewStyle"
            android:text="@string/category"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/categoryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/brandView"
            style="@style/TextViewStyle"
            android:text="@string/brand"
            app:layout_constraintTop_toBottomOf="@id/spn3"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/brand"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/brandView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/quantityText"
            style="@style/TextViewStyle"
            android:text="@string/quantity"
            app:layout_constraintTop_toBottomOf="@id/brand"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/quantity"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/quantityText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/priceView"
            style="@style/TextViewStyle"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/quantity"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/price"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/priceView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/descView2"
            style="@style/TextViewStyle"
            android:text="@string/description"
            app:layout_constraintTop_toBottomOf="@id/price"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/desc"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@id/descView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_item"
            android:textColor="@color/black"
            android:backgroundTint="@color/lightBlue"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
