<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:ignore="ExtraText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/baseline_account_circle_24" />

            <TextView
                android:id="@+id/the_category"
                style="@style/TextViewStyle"
                android:text="@string/choose_goods" />

            <TextView
                android:id="@+id/search"
                style="@style/TextViewStyle" />

            <Spinner
                android:id="@+id/spinnerItems"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:scrollbarSize="100dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/itemInfo"
                style="@style/TextViewStyle"
                android:text="" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/ignore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/ignore"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_next2"
                    style="@style/buttons"
                    android:layout_margin="20dp"
                    android:text="@string/buy_ignore" />

                <Button
                    android:id="@+id/yourList"
                    style="@style/buttons"
                    android:layout_margin="20dp"
                    android:text="@string/see_your_list" />
            </LinearLayout>



            <TextView
                android:id="@+id/res"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:autofillHints=""
                android:visibility="gone"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                style="@style/buttons"
                android:text="@string/log_out"
                android:id="@+id/logOut"
                />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>